---
source: crates/build/src/ops/mod.rs
expression: "&tables.schema_docs"

---
[
    SchemaDoc {
        schema: builtin://flow/ops-log-schema.json,
        dom: {"$schema":"https://json-schema.org/draft-07/schema","description":"Logs related to the processing of a Flow capture, derivation, or materialization","properties":{"fields":{"additionalProperties":true,"description":"Map of keys and values that are associated with this log entry.","type":"object"},"level":{"enum":["debug","info","warn","error"]},"message":{"type":"string"},"task":{"$ref":"ops-task-schema.json"},"ts":{"description":"Timestamp corresponding to the start of the transaction","format":"date-time","type":"string"}},"required":["task","ts","level","message"],"title":"Flow task logs","type":"object"},
    },
    SchemaDoc {
        schema: builtin://flow/ops-stats-schema.json,
        dom: {"$defs":{"combineMetrics":{"properties":{"bytes_total":{"description":"The number of bytes processed from or into the given collection capture or materialization. Note that for \ncaptures and materializations this relates to the size of Flow JSON documents not the representation used by the external system.\n","reduce":{"strategy":"sum"},"type":"integer"},"docs_total":{"description":"The number of documents processed from or into the given collection capture or materialization","reduce":{"strategy":"sum"},"type":"integer"}},"reduce":{"strategy":"merge"},"required":["docs_total","bytes_total"],"type":"object"},"lambdaMetrics":{"properties":{"duration_seconds":{"description":"The total number of seconds elapsed for all invocations.","reduce":{"strategy":"sum"},"type":"number"},"invocations_total":{"description":"The number of invocations during this transaction","reduce":{"strategy":"sum"},"type":"integer"}},"reduce":{"strategy":"merge"},"required":["invocations_total","duration_seconds"],"type":"object"}},"$schema":"https://json-schema.org/draft-07/schema","description":"Statistics related to the processing of a Flow capture, derivation, or materialization","properties":{"combine":{"properties":{"left":{"$ref":"#/$defs/combineMetrics"},"out":{"$ref":"#/$defs/combineMetrics"},"right":{"$ref":"#/$defs/combineMetrics"}},"reduce":{"strategy":"merge"},"type":"object"},"connector":{"properties":{"start":{"description":"Counter of connector invocations","reduce":{"strategy":"sum"},"type":"integer"}},"reduce":{"strategy":"merge"},"type":"object"},"lambda":{"properties":{"publish":{"$ref":"#/$defs/lambdaMetrics"},"update":{"$ref":"#/$defs/lambdaMetrics"}},"reduce":{"strategy":"merge"},"type":"object"},"task":{"$ref":"ops-task-schema.json"},"ts":{"description":"Timestamp corresponding to the start of the transaction","format":"date-time","reduce":{"strategy":"maximize"},"type":"string"}},"reduce":{"strategy":"merge"},"required":["task","ts","combine"],"title":"Flow task stats","type":"object"},
    },
    SchemaDoc {
        schema: builtin://flow/ops-task-schema.json,
        dom: {"$schema":"https://json-schema.org/draft-07/schema","description":"Identifies a task, which may be the source of a log message or metrics","properties":{"keyBegin":{"description":"The inclusive beginning of the shard's assigned key range","pattern":"[0-9A-F]{8}","type":"string"},"kind":{"description":"The type of the catalog task","enum":["capture","derivation","materialization"]},"name":{"description":"The name of the catalog task (without the task type prefix)","type":"string"},"rClockBegin":{"description":"The inclusive beginning of the shard's assigned rClock range","pattern":"[0-9A-F]{8}","type":"string"}},"required":["kind","name","keyBegin","rClockBegin"],"title":"Flow catalog task id","type":"object"},
    },
]
